--- a/myPAGE1/myPAGE.html
+++ b/myPAGE1/myPAGE.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>My Page</title>
-<link rel="stylesheet" type="text/css" href="mypage.css">
+<link rel="stylesheet" type="text/css" href="myPAGE.css">
 </head>
 <body>
 
